--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "module": "index.js",
   "type": "module",
   "private": true,
+  "scripts": {
+    "start": "bun run index.js"
+  },
+  "main": "index.js",
   "devDependencies": {
     "@types/bun": "latest"
   },
